# tinyraytracer

./: .gitignore  CMakeLists.txt  README.md
source/: camera.cpp  camera.h  dieletric.h  lambertian.h  main.cpp  material.h  metal.h  primitive.h  rand.h  ray.h  rayhit.h  sphere.cpp  sphere.h  timing.cpp  timing.h  util.cpp  util.h  vec3.h
